--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -33,8 +33,8 @@ The state serialization is then defined as the dictionary built from the amalgam
       \pendingset,
       \epochroot,
       \abracegroupboth{
-        0\ &\when \sealtickets \in \sequence[\epochlen]{\safroleticket}\\
-        1\ &\when \sealtickets \in \sequence[\epochlen]{\bskey}\\
+        0\ &\when \sealtickets \in \sequence[\Cepochlen]{\safroleticket}\\
+        1\ &\when \sealtickets \in \sequence[\Cepochlen]{\bskey}\\
       },
       \sealtickets,
       \var{\ticketaccumulator}
