--- a/text/auditing.tex
+++ b/text/auditing.tex
@@ -10,7 +10,7 @@ The auditing process involves each node requiring themselves to fetch, evaluate 
 
 If all declared intentions for a work-report are matched by a positive judgment at any given juncture, then the work-report is considered \emph{audited}. Once all of any given block's newly available work-reports are audited, then we consider the block to be \emph{audited}. One prerequisite of a node finalizing a block is for it to view the block as audited. Note that while there will be eventual consensus on whether a block is audited, there may not be consensus at the time that the block gets finalized. This does not affect the crypto-economic guarantees of this system.
 
-In regular operation, no negative judgments will ultimately be found for a work-report, and there will be no direct consequences of the auditing stage. In the unlikely event that a negative judgment is found, then one of several things happens; if there are still more than $\twothirds\valcount$ positive judgments, then validators issuing negative judgments may receive a punishment for time-wasting. If there are greater than $\onethird\valcount$ negative judgments, then the block which includes the work-report is ban-listed. It and all its descendants are disregarded and may not be built on. In all cases, once there are enough votes, a judgment extrinsic can be constructed by a block author and placed on-chain to denote the outcome. See section \ref{sec:disputes} for details on this.
+In regular operation, no negative judgments will ultimately be found for a work-report, and there will be no direct consequences of the auditing stage. In the unlikely event that a negative judgment is found, then one of several things happens; if there are still more than $\twothirds\Cvalcount$ positive judgments, then validators issuing negative judgments may receive a punishment for time-wasting. If there are greater than $\onethird\Cvalcount$ negative judgments, then the block which includes the work-report is ban-listed. It and all its descendants are disregarded and may not be built on. In all cases, once there are enough votes, a judgment extrinsic can be constructed by a block author and placed on-chain to denote the outcome. See section \ref{sec:disputes} for details on this.
 
 All announcements and judgments are published to all validators along with metadata describing the signed material. On receipt of sure data, validators are expected to update their perspective accordingly (later defined as $J$ and $A$).
 
@@ -36,7 +36,7 @@ Each validator shall perform auditing duties on each valid block received. Since
 
 We define the sequence of work-reports which we may be required to audit as $\local¬reports$, a sequence of length equal to the number of cores, which functions as a mapping of core index to a work-report pending which has just become available, or $\none$ if no report became available on the core. Formally:
 \begin{align}\label{eq:auditselection}
-  \local¬reports &\in \sequence[\corecount]{\optional{\workreport}} \\
+  \local¬reports &\in \sequence[\Ccorecount]{\optional{\workreport}} \\
   \local¬reports &\equiv \sq{\build{
     \begin{rcases}
       \reports\subb{\cX}_\rs¬workreport &\when \reports\subb{\cX}_\rs¬workreport \in \justbecameavailable \\
@@ -59,9 +59,9 @@ We may then define $\local¬tranche\sub{0}$ as the non-empty items to audit thro
   \where \mathbf{p} &= \fyshuffle{\sq{\build{\tup{\cX, \local¬reports\sub{\cX}}}{\cX \orderedin \coreindex}}, \banderout{\local¬seed\sub{0}}} \\
 \end{align}
 
-Every $\mathsf{A} = 8$ seconds following a new time slot, a new tranche begins, and we may determine that additional cores warrant an audit from us. Such items are defined as $\local¬tranche\sub{n}$ where $n$ is the current tranche. Formally:
+Every $\Ctrancheseconds = 8$ seconds following a new time slot, a new tranche begins, and we may determine that additional cores warrant an audit from us. Such items are defined as $\local¬tranche\sub{n}$ where $n$ is the current tranche. Formally:
 \begin{equation}
-  \using n = \ffrac{\wallclock - \mathsf{P}\cdot\H_\¬timeslot}{\mathsf{A}}
+  \using n = \ffrac{\wallclock - \Cslotseconds\cdot\H_\¬timeslot}{\Ctrancheseconds}
 \end{equation}
 
 New tranches may contain items from $\local¬reports$ stemming from one of two reasons: either a negative judgment has been received; or the number of judgments from the previous tranche is less than the number of announcements from said tranche. In the first case, the validator is always required to issue a judgment on the work-report. In the second case, a new special-purpose \textsc{vrf} must be constructed to determine if an audit and judgment is warranted from us.
@@ -93,11 +93,11 @@ We can thus define $\local¬tranche\sub{n}$ beyond the initial tranche through a
 \begin{align}
   \nonumber\forall n > 0:&\\
   \ \local¬seed\sub{n}(\wrX) &\in \bssignature{\activeset\subb{v}_\vk¬bs}{\mathsf{X}_U \concat \banderout{\H_\¬vrfsig}\concat\blake{\wrX}\append n}{\sq{}} \\
-  \ \local¬tranche\sub{n} &\equiv \set{ \build{ \wrX }{\textstyle\frac{\valcount}{256\mathsf{F}}\banderout{\local¬seed\sub{n}(\wrX)}\sub{0} < m\sub{n}, \wrX \in \local¬reports, \wrX \ne \none }}\!\!\!\!\\
+  \ \local¬tranche\sub{n} &\equiv \set{ \build{ \wrX }{\textstyle\frac{\Cvalcount}{256\Cauditbiasfactor}\banderout{\local¬seed\sub{n}(\wrX)}\sub{0} < m\sub{n}, \wrX \in \local¬reports, \wrX \ne \none }}\!\!\!\!\\
   \nonumber \where m\sub{n} &= \len{A_{n - 1}(\wrX) \setminus J_\top(\wrX)}
 \end{align}
 
-We define our bias factor $\mathsf{F} = 2$, which is the expected number of validators which will be required to issue a judgment for a work-report given a single no-show in the tranche before. Modeling by \cite{cryptoeprint:2024/961} shows that this is optimal.
+We define our bias factor $\Cauditbiasfactor = 2$, which is the expected number of validators which will be required to issue a judgment for a work-report given a single no-show in the tranche before. Modeling by \cite{cryptoeprint:2024/961} shows that this is optimal.
 
 Later audits must be announced in a similar fashion to the first. If audit requirements lessen on the receipt of new information (\ie a positive judgment being returned for a previous \emph{no-show}), then any audits already announced are completed and judgments published. If audit requirements raise on the receipt of new information (\ie an additional announcement being found without an accompanying judgment), then we announce the additional audit(s) we will undertake.
 
@@ -144,7 +144,7 @@ We consider a work-report as audited under two circumstances. Either, when it ha
 \begin{align}
   U(\wrX) &\Leftrightarrow \bigvee\,\abracegroup[\,]{
     &J_\bot(\wrX) = \emptyset \wedge \exists n : A\sub{n}(\wrX) \subset J_\top(\wrX) \\
-    &\len{J_\top(\wrX)} > \twothirds\valcount
+    &\len{J_\top(\wrX)} > \twothirds\Cvalcount
   }
 \end{align}
 
