--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -42,7 +42,7 @@
     \item[$\bskey$] The set of Bandersnatch public keys. A subset of $\blob[32]$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \end{description}
   \item[$\operandtuple$] The $\mathbb{I}$nformation concerning a single work-item once prepared as an operand for the accumulation function. See equation \ref{eq:operandtuple}.
-  \item[$\segment$] The set of data segments, equivalent to $\blob[\mathsf{W}_G]$. See equation \ref{eq:segment}.
+  \item[$\segment$] The set of data segments, equivalent to $\blob[\Csegmentsize]$. See equation \ref{eq:segment}.
   \item[$\valkey$] The set of validator $\mathbb{K}$ey-sets. See equation \ref{eq:validatorkeys}.
   \item[$\implications$] The set representing implications of accumulation. See equation \ref{eq:implication}.
   \item[$\ram$] The set of \textsc{pvm} $\mathbb{M}$emory (\textsc{ram}) states. See equation \ref{eq:pvmmemory}.
@@ -250,47 +250,47 @@ Here, the prime annotation indicates posterior state. Individual components may 
 \subsubsection{Constants}
 
 \begin{description}
-  \item[$\mathsf{A} = 8$] The period, in seconds, between audit tranches.
-  \item[$\mathsf{B}_I = 10$] The additional minimum balance required per item of elective service state.
-  \item[$\mathsf{B}_L = 1$] The additional minimum balance required per octet of elective service state.
-  \item[$\mathsf{B}_S = 100$] The basic minimum balance which all services require.
-  \item[$\corecount = 341$] The total number of cores.
-  \item[$\mathsf{D} = 19,200$] The period in timeslots after which an unreferenced preimage may be expunged.
-  \item[$\epochlen = 600$] The length of an epoch in timeslots.
-  \item[$\mathsf{F} = 2$] The audit bias factor, the expected number of additional validators who will audit a work-report in the following tranche for each no-show in the previous.
-  \item[$\mathsf{G}_A = 10,000,000$] The gas allocated to invoke a work-report's Accumulation logic.
-  \item[$\mathsf{G}_I = 50,000,000$] The gas allocated to invoke a work-package's Is-Authorized logic.
-  \item[$\mathsf{G}_R = 5,000,000,000$] The gas allocated to invoke a work-package's Refine logic.
-  \item[$\mathsf{G}_T = 3,500,000,000$] The total gas allocated across for all Accumulation. Should be no smaller than $\mathsf{G}_A\cdot\corecount + \sum_{g \in \values{\alwaysaccers}}(g)$.
-  \item[$\mathsf{H} = 8$] The size of recent history, in blocks.
-  \item[$\mathsf{I} = 16$] The maximum amount of work items in a package.
-  \item[$\mathsf{J} = 8$] The maximum sum of dependency items in a work-report.
-  \item[$\mathsf{K} = 16$] The maximum number of tickets which may be submitted in a single extrinsic.
-  \item[$\mathsf{L} = 14,400$] The maximum age in timeslots of the lookup anchor.
-  \item[$\mathsf{N} = 2$] The number of ticket entries per validator.
-  \item[$\mathsf{O} = 8$] The maximum number of items in the authorizations pool.
-  \item[$\mathsf{P} = 6$] The slot period, in seconds.
-  \item[$\mathsf{Q} = 80$] The number of items in the authorizations queue.
-  \item[$\mathsf{R} = 10$] The rotation period of validator-core assignments, in timeslots.
-  \item[$\mathsf{T} = 128$] The maximum number of extrinsics in a work-package.
-  \item[$\mathsf{U} = 5$] The period in timeslots after which reported but unavailable work may be replaced.
-  \item[$\valcount = 1023$] The total number of validators.
-  \item[$\mathsf{W}_A = 64,000$] The maximum size of is-authorized code in octets.
-  \item[$\mathsf{W}_B = 13,794,305$] The maximum size of an encoded work-package together with its extrinsic data and import implications, in octets.
-  \item[$\mathsf{W}_C = 4,000,000$] The maximum size of service code in octets.
-  \item[$\mathsf{W}_E = 684$] The basic size of erasure-coded pieces in octets. See equation \ref{eq:erasurecoding}.
-  \item[$\mathsf{W}_G = \mathsf{W}_P\mathsf{W}_E = 4104$] The size of a segment in octets.
-  \item[$\mathsf{W}_M = 3,072$] The maximum number of imports in a work-package.
-  \item[$\mathsf{W}_P = 6$] The number of erasure-coded pieces in a segment.
-  \item[$\mathsf{W}_R = 48\cdot2^{10}$] The maximum total size of all unbounded blobs in a work-report, in octets.
-  \item[$\mathsf{W}_T = 128$] The size of a transfer memo in octets.
-  \item[$\mathsf{W}_X = 3,072$] The maximum number of exports in a work-package.
+  \item[$\Ctrancheseconds = 8$] The period, in seconds, between audit tranches.
+  \item[$\Citemdeposit = 10$] The additional minimum balance required per item of elective service state.
+  \item[$\Cbytedeposit = 1$] The additional minimum balance required per octet of elective service state.
+  \item[$\Cbasedeposit = 100$] The basic minimum balance which all services require.
+  \item[$\Ccorecount = 341$] The total number of cores.
+  \item[$\Cexpungeperiod = 19,200$] The period in timeslots after which an unreferenced preimage may be expunged.
+  \item[$\Cepochlen = 600$] The length of an epoch in timeslots.
+  \item[$\Cauditbiasfactor = 2$] The audit bias factor, the expected number of additional validators who will audit a work-report in the following tranche for each no-show in the previous.
+  \item[$\Creportaccgas = 10,000,000$] The gas allocated to invoke a work-report's Accumulation logic.
+  \item[$\Cpackageauthgas = 50,000,000$] The gas allocated to invoke a work-package's Is-Authorized logic.
+  \item[$\Cpackagerefgas = 5,000,000,000$] The gas allocated to invoke a work-package's Refine logic.
+  \item[$\Cblockaccgas = 3,500,000,000$] The total gas allocated across for all Accumulation. Should be no smaller than $\Creportaccgas\cdot\Ccorecount + \sum_{g \in \values{\alwaysaccers}}(g)$.
+  \item[$\Crecenthistorylen = 8$] The size of recent history, in blocks.
+  \item[$\Cmaxpackageitems = 16$] The maximum amount of work items in a package.
+  \item[$\Cmaxreportdeps = 8$] The maximum sum of dependency items in a work-report.
+  \item[$\Cmaxblocktickets = 16$] The maximum number of tickets which may be submitted in a single extrinsic.
+  \item[$\Cmaxlookupanchorage = 14,400$] The maximum age in timeslots of the lookup anchor.
+  \item[$\Cticketentries = 2$] The number of ticket entries per validator.
+  \item[$\Cauthpoolsize = 8$] The maximum number of items in the authorizations pool.
+  \item[$\Cslotseconds = 6$] The slot period, in seconds.
+  \item[$\Cauthqueuesize = 80$] The number of items in the authorizations queue.
+  \item[$\Crotationperiod = 10$] The rotation period of validator-core assignments, in timeslots.
+  \item[$\Cmaxpackagexts = 128$] The maximum number of extrinsics in a work-package.
+  \item[$\Cassurancetimeoutperiod = 5$] The period in timeslots after which reported but unavailable work may be replaced.
+  \item[$\Cvalcount = 1023$] The total number of validators.
+  \item[$\Cmaxauthcodesize = 64,000$] The maximum size of is-authorized code in octets.
+  \item[$\Cmaxbundlesize = 13,794,305$] The maximum size of an encoded work-package together with its extrinsic data and import implications, in octets.
+  \item[$\Cmaxservicecodesize = 4,000,000$] The maximum size of service code in octets.
+  \item[$\Cecpiecesize = 684$] The basic size of erasure-coded pieces in octets. See equation \ref{eq:erasurecoding}.
+  \item[$\Csegmentsize = \Csegmentecpieces\Cecpiecesize = 4104$] The size of a segment in octets.
+  \item[$\Cmaxpackageimports = 3,072$] The maximum number of imports in a work-package.
+  \item[$\Csegmentecpieces = 6$] The number of erasure-coded pieces in a segment.
+  \item[$\Cmaxreportvarsize = 48\cdot2^{10}$] The maximum total size of all unbounded blobs in a work-report, in octets.
+  \item[$\Cmemosize = 128$] The size of a transfer memo in octets.
+  \item[$\Cmaxpackageexports = 3,072$] The maximum number of exports in a work-package.
   \item[$\mathsf{X}$] Context strings, see below.
-  \item[$\mathsf{Y} = 500$] The number of slots into an epoch at which ticket-submission ends.
-  \item[$\mathsf{Z}_A = 2$] The \textsc{pvm} dynamic address alignment factor. See equation \ref{eq:jumptablealignment}.
-  \item[$\mathsf{Z}_I = 2^{24}$] The standard \textsc{pvm} program initialization input data size. See equation \ref{sec:standardprograminit}.
-  \item[$\mathsf{Z}_P = 2^{12}$] The \textsc{pvm} memory page size. See equation \ref{eq:pvmmemory}.
-  \item[$\mathsf{Z}_Z = 2^{16}$] The standard \textsc{pvm} program initialization zone size. See section \ref{sec:standardprograminit}.
+  \item[$\Cepochtailstart = 500$] The number of slots into an epoch at which ticket-submission ends.
+  \item[$\Cpvmdynaddralign = 2$] The \textsc{pvm} dynamic address alignment factor. See equation \ref{eq:jumptablealignment}.
+  \item[$\Cpvminitinputsize = 2^{24}$] The standard \textsc{pvm} program initialization input data size. See equation \ref{sec:standardprograminit}.
+  \item[$\Cpvmpagesize = 2^{12}$] The \textsc{pvm} memory page size. See equation \ref{eq:pvmmemory}.
+  \item[$\Cpvminitzonesize = 2^{16}$] The standard \textsc{pvm} program initialization zone size. See section \ref{sec:standardprograminit}.
 \end{description}
 
 \subsubsection{Signing Contexts}
