--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -151,7 +151,7 @@ Formally, let $\mathbf{r}$ and $\mathbf{w}$ be the set of indices by which $\mem
   \varepsilon^\mu &= \begin{cases}
     \continue &\when \mathbf{x} = \emset \\
     \panic &\when \min(\mathbf{x}) \bmod 2^{32} < 2^{16} \\
-    \fault \times \mathsf{Z}_P\floor{\min(\mathbf{x}) \bmod 2^{32} \div \mathsf{Z}_P} &\otherwise
+    \fault \times \Cpvmpagesize\floor{\min(\mathbf{x}) \bmod 2^{32} \div \Cpvmpagesize} &\otherwise
   \end{cases}
 \end{align}
 
@@ -206,14 +206,14 @@ Any alterations of the program counter stemming from a static jump, call or bran
   \end{cases}
 \end{equation}
 
-Jumps whose next instruction is dynamically computed must use an address which may be indexed into the jump-table $\mathbf{j}$. Through a quirk of tooling\footnote{The popular code generation backend \textsc{llvm} requires and assumes in its code generation that dynamically computed jump destinations always have a certain memory alignment. Since at present we depend on this for our tooling, we must acquiesce to its assumptions.}, we define the dynamic address required by the instructions as the jump table index incremented by one and then multiplied by our jump alignment factor $\mathsf{Z}_A = 2$.
+Jumps whose next instruction is dynamically computed must use an address which may be indexed into the jump-table $\mathbf{j}$. Through a quirk of tooling\footnote{The popular code generation backend \textsc{llvm} requires and assumes in its code generation that dynamically computed jump destinations always have a certain memory alignment. Since at present we depend on this for our tooling, we must acquiesce to its assumptions.}, we define the dynamic address required by the instructions as the jump table index incremented by one and then multiplied by our jump alignment factor $\Cpvmdynaddralign = 2$.
 
 As with other irregular alterations to the program counter, target code index must be the start of a basic block or else a panic occurs. Formally:
 \begin{equation}\label{eq:jumptablealignment}
   \token{djump}(a) \implies \tup{\varepsilon, \imath'} = \begin{cases}
     \tup{\halt, \imath} &\when a = 2^{32} - 2^{16}\\
-    \tup{\panic, \imath} &\otherwhen a = 0 \vee a > \len{\mathbf{j}}\cdot\mathsf{Z}_A \vee a \bmod \mathsf{Z}_A \ne 0 \vee \mathbf{j}_{(\nicefrac{a}{\mathsf{Z}_A}) - 1} \not\in \basicblocks \\
-    (\continue, \mathbf{j}_{(\nicefrac{a}{\mathsf{Z}_A}) - 1}) &\otherwise
+    \tup{\panic, \imath} &\otherwhen a = 0 \vee a > \len{\mathbf{j}}\cdot\Cpvmdynaddralign \vee a \bmod \Cpvmdynaddralign \ne 0 \vee \mathbf{j}_{(\nicefrac{a}{\Cpvmdynaddralign}) - 1} \not\in \basicblocks \\
+    (\continue, \mathbf{j}_{(\nicefrac{a}{\Cpvmdynaddralign}) - 1}) &\otherwise
   \end{cases}
 \end{equation}
 
@@ -456,7 +456,7 @@ We assume the skip length $\ell$ is well-defined:
 \bottomrule
 \end{longtable}
 
-Note, the term $h$ above refers to the beginning of the heap, the second major section of memory as defined in equation \ref{eq:memlayout} as $2\mathsf{Z}_Z + \rnq{\len{\mathbf{o}}}$. If $\token{sbrk}$ instruction is invoked on a \textsc{pvm} instance which does not have such a memory layout, then $h = 0$.
+Note, the term $h$ above refers to the beginning of the heap, the second major section of memory as defined in equation \ref{eq:memlayout} as $2\Cpvminitzonesize + \rnq{\len{\mathbf{o}}}$. If $\token{sbrk}$ instruction is invoked on a \textsc{pvm} instance which does not have such a memory layout, then $h = 0$.
 
 \subsubsection{Instructions with Arguments of Two Registers \& One Immediate}
 \begin{equation}
@@ -757,7 +757,7 @@ The software programs which will run in each of the four instances where the \te
 We thus define the standard program code format $\mathbf{p}$, which includes not only the instructions and jump table (previously represented by the term $\mathbf{c}$), but also information on the state of the \textsc{ram} at program start. Given program blob $\mathbf{p}$ and argument data $\mathbf{a}$, we can decode the program code $\mathbf{c}$, registers $\registers$, and \textsc{ram} $\mem$ by invoking the standard initialization function $Y(\mathbf{p}, \mathbf{a})$:
 \begin{equation}
 Y\colon\abracegroup{
-  \tuple{\blob, \blob[:\mathsf{Z}_I]} &\to \tuple{\blob, \regs, \ram}? \\
+  \tuple{\blob, \blob[:\Cpvminitinputsize]} &\to \tuple{\blob, \regs, \ram}? \\
   \tup{\mathbf{p}, \mathbf{a}} &\mapsto \begin{cases}
     \tup{\mathbf{c}, \registers, \mem} &\when \exists! \tup{\mathbf{c}, \mathbf{o}, \mathbf{w}, z, s} \text{ which satisfy equation \ref{eq:conditions}}\\
     \none &\otherwise
@@ -767,49 +767,49 @@ Y\colon\abracegroup{
 With conditions:
 \begin{align}\label{eq:conditions}
   &\using \mathcal{E}_3(\len{\mathbf{o}}) \concat \mathcal{E}_3(\len{\mathbf{w}}) \concat \mathcal{E}_2(z) \concat \mathcal{E}_3(s) \concat \mathbf{o} \concat \mathbf{w} \concat \mathcal{E}_4(\len{\mathbf{c}}) \concat \mathbf{c} = \mathbf{p}\\
-  &\mathsf{Z}_Z = 2^{16}\ ,\quad\mathsf{Z}_I = 2^{24}\\
-  &\using \rnp{x \in \N} \equiv \mathsf{Z}_P\ceil{ \frac{x}{\mathsf{Z}_P} }\quad,\qquad\rnq{x \in \N} \equiv \mathsf{Z}_Z\ceil{ \frac{x}{\mathsf{Z}_Z} }\\
-  &5\mathsf{Z}_Z + \rnq{\len{\mathbf{o}}} + \rnq{\len{\mathbf{w}} + z\mathsf{Z}_P} + \rnq{s} + \mathsf{Z}_I \leq 2^{32}
+  &\Cpvminitzonesize = 2^{16}\ ,\quad\Cpvminitinputsize = 2^{24}\\
+  &\using \rnp{x \in \N} \equiv \Cpvmpagesize\ceil{ \frac{x}{\Cpvmpagesize} }\quad,\qquad\rnq{x \in \N} \equiv \Cpvminitzonesize\ceil{ \frac{x}{\Cpvminitzonesize} }\\
+  &5\Cpvminitzonesize + \rnq{\len{\mathbf{o}}} + \rnq{\len{\mathbf{w}} + z\Cpvmpagesize} + \rnq{s} + \Cpvminitinputsize \leq 2^{32}
 \end{align}
 Thus, if the above conditions cannot be satisfied with unique values, then the result is $\none$, otherwise it is a tuple of $\mathbf{c}$ as above and $\mem$, $\registers$ such that:
 \begin{equation}\label{eq:memlayout}
-  \forall i \in \Nbits{32} : ((\mem_\ram¬value)\sub{i}, (\mem_\ram¬access)_{\floor{\nicefrac{i}{\mathsf{Z}_P}}}) = \bracegroup{\begin{alignedat}{5}
-    &\tup{\is{\ram¬value}{\mathbf{o}_{i - \mathsf{Z}_Z}},\,\is{\ram¬access}{R}} &&\ \when
-        \mathsf{Z}_Z
+  \forall i \in \Nbits{32} : ((\mem_\ram¬value)\sub{i}, (\mem_\ram¬access)_{\floor{\nicefrac{i}{\Cpvmpagesize}}}) = \bracegroup{\begin{alignedat}{5}
+    &\tup{\is{\ram¬value}{\mathbf{o}_{i - \Cpvminitzonesize}},\,\is{\ram¬access}{R}} &&\ \when
+        \Cpvminitzonesize
             &\ \leq i < \ &&
-                \mathsf{Z}_Z + \len{\mathbf{o}}\\
+                \Cpvminitzonesize + \len{\mathbf{o}}\\
     &\tup{0, R} &&\ \when
-        \mathsf{Z}_Z + \len{\mathbf{o}}
+        \Cpvminitzonesize + \len{\mathbf{o}}
             &\ \leq i < \ &&
-                \mathsf{Z}_Z + \rnp{\len{\mathbf{o}}} \\
-    &(\mathbf{w}_{i - (2\mathsf{Z}_Z + \rnq{\len{\mathbf{o}}})}, W) &&\ \when
-        2\mathsf{Z}_Z + \rnq{\len{\mathbf{o}}}
+                \Cpvminitzonesize + \rnp{\len{\mathbf{o}}} \\
+    &(\mathbf{w}_{i - (2\Cpvminitzonesize + \rnq{\len{\mathbf{o}}})}, W) &&\ \when
+        2\Cpvminitzonesize + \rnq{\len{\mathbf{o}}}
             &\ \leq i < \ &&
-                2\mathsf{Z}_Z + \rnq{\len{\mathbf{o}}} + \len{\mathbf{w}}\\
+                2\Cpvminitzonesize + \rnq{\len{\mathbf{o}}} + \len{\mathbf{w}}\\
     &\tup{0, W} &&\ \when
-        2\mathsf{Z}_Z + \rnq{\len{\mathbf{o}}} + \len{\mathbf{w}}
+        2\Cpvminitzonesize + \rnq{\len{\mathbf{o}}} + \len{\mathbf{w}}
             &\ \leq i < \ &&
-                2\mathsf{Z}_Z + \rnq{\len{\mathbf{o}}} + \rnp{\len{\mathbf{w}}} + z\mathsf{Z}_P\\
+                2\Cpvminitzonesize + \rnq{\len{\mathbf{o}}} + \rnp{\len{\mathbf{w}}} + z\Cpvmpagesize\\
     &\tup{0, W} &&\ \when
-        2^{32} - 2\mathsf{Z}_Z - \mathsf{Z}_I - \rnp{s}
+        2^{32} - 2\Cpvminitzonesize - \Cpvminitinputsize - \rnp{s}
             &\ \leq i < \ &&
-                2^{32} - 2\mathsf{Z}_Z - \mathsf{Z}_I\\
-    &(\mathbf{a}_{i - (2^{32} - \mathsf{Z}_Z - \mathsf{Z}_I)}, R) &&\ \when
-        2^{32} - \mathsf{Z}_Z - \mathsf{Z}_I
+                2^{32} - 2\Cpvminitzonesize - \Cpvminitinputsize\\
+    &(\mathbf{a}_{i - (2^{32} - \Cpvminitzonesize - \Cpvminitinputsize)}, R) &&\ \when
+        2^{32} - \Cpvminitzonesize - \Cpvminitinputsize
             &\ \leq i < \ &&
-                2^{32} - \mathsf{Z}_Z - \mathsf{Z}_I + \len{\mathbf{a}}\\
+                2^{32} - \Cpvminitzonesize - \Cpvminitinputsize + \len{\mathbf{a}}\\
     &\tup{0, R} &&\ \when
-        2^{32} - \mathsf{Z}_Z - \mathsf{Z}_I + \len{\mathbf{a}}
+        2^{32} - \Cpvminitzonesize - \Cpvminitinputsize + \len{\mathbf{a}}
             &\ \leq i < \ &&
-                2^{32} - \mathsf{Z}_Z - \mathsf{Z}_I + \rnp{\len{\mathbf{a}}}\\
+                2^{32} - \Cpvminitzonesize - \Cpvminitinputsize + \rnp{\len{\mathbf{a}}}\\
     &\tup{0, \none} &&\otherwise&&&
   \end{alignedat}}\\
 \end{equation}
 \begin{equation}\label{eq:registers}
   \forall i \in \Nmax{13} : \registers\sub{i} = \begin{cases}
       2^{32} - 2^{16} &\when i = 0\\
-      2^{32} - 2\mathsf{Z}_Z - \mathsf{Z}_I &\when i = 1\\
-      2^{32} - \mathsf{Z}_Z - \mathsf{Z}_I &\when i = 7\\
+      2^{32} - 2\Cpvminitzonesize - \Cpvminitinputsize &\when i = 1\\
+      2^{32} - \Cpvminitzonesize - \Cpvminitinputsize &\when i = 7\\
       \len{\mathbf{a}}&\when i = 8\\
       0 &\otherwise
     \end{cases}
@@ -821,7 +821,7 @@ The four instances where the \textsc{pvm} is utilized each expect to be able to 
 \begin{equation}
   \Psi_M\colon \abracegroup{
     \tuple{
-      \blob, \pvmreg, \gas, \blob[:\mathsf{Z}_I], \contextmutator{X}, X
+      \blob, \pvmreg, \gas, \blob[:\Cpvminitinputsize], \contextmutator{X}, X
     } &\to \tuple{\gas, \blob \cup \set{\panic, \oog}, X}\\
     \tup{\mathbf{p}, \imath, \gascounter, \mathbf{a}, f, \mathbf{x}} &\mapsto \begin{cases}
       \tup{0, \panic, \mathbf{x}} &\when Y(\mathbf{p}, \mathbf{a}) = \none\\
